# AI-Agent-Learning

./: .env.example  AI Agent架构师.md  README.md  pyproject.toml
缓冲期1-架构复盘与指标评测体系搭建/: 第9周_RAG评测体系Ragas.md
缓冲期2-系统服务彻底微服务解耦化重构/: 第18周_微服务解耦重构.md
阶段1-LLM原理与调度基石/: context_truncator.py  deepseek_common.py  llm_common.py  token_count.py  总结第1周.md  第1周_Transformer & Token 机制.md  第2周_推理模式与Prompt结构深度演进.md
阶段1-LLM原理与调度基石/第1周_Transformer & Token 机制/: Transformer & Token 机制.md  context_truncator.py  llm_common.py  token_count.py  总结.md
阶段1-LLM原理与调度基石/第3周_模型网关建设与动态路由/: 模型网关建设与动态路由.md
阶段1-LLM原理与调度基石/第4周_幻觉发生剖析与防御抑制策略/: 幻觉发生剖析与防御抑制策略.md
阶段2-生产级 RAG 架构/: 第6周_向量数据库与GraphRAG.md  第7周_混合检索与重排序.md  第8周_生产级RAG与AgenticRAG.md
阶段2-生产级 RAG 架构/第5周_文档处理与Chunk策略/: 文档处理与Chunk策略.md
阶段2-生产级 RAG 架构/第8周_生产级RAG与AgenticRAG/: 生产级RAG与AgenticRAG.md
阶段3-Agent 状态机演化与工作流编排/: 第10周_LangGraph状态机与MCP协议.md  第11周_工作流分治与DSPy入门.md  第12周_DSPy编译优化与异常自愈.md  第13周_链路监控与可观测性.md
阶段3-Agent 状态机演化与工作流编排/第10周_LangGraph状态机与MCP协议/: LangGraph状态机与MCP协议.md
阶段3-Agent 状态机演化与工作流编排/第11周_工作流分治与DSPy入门/: 工作流分治与DSPy入门.md
阶段4-Memory 系统重装抽象基建/: 第14周_短期记忆与Token预算.md  第16周_递归摘要压缩.md
阶段4-Memory 系统重装抽象基建/第15周_长期记忆与用户画像/: 长期记忆与用户画像.md
阶段4-Memory 系统重装抽象基建/第17周_三层记忆聚合架构/: 三层记忆聚合架构.md
阶段5-多智能体协作系统网络 (Multi-Agent System)/: 第20周_异步通信与A2A协议.md  第21周_MAS闭环联动演练.md  第22周_代码沙盒安全隔离.md
阶段5-多智能体协作系统网络 (Multi-Agent System)/第19周_多Agent角色编排/: 多Agent角色编排.md
阶段5-多智能体协作系统网络 (Multi-Agent System)/第22周_代码沙盒安全隔离/: 代码沙盒安全隔离.md
阶段6-终极工程合规化升级与极客出师战/: 第25周_缓存计算与容灾降级.md  第26周_企业级系统封卷发布.md
阶段6-终极工程合规化升级与极客出师战/第24周_高并发队列与消峰/: 高并发队列与消峰.md
(+1 files in other folders)
