[project]
name = "AI-Agent-Learning"
version = "0.1.0"
description = "AI-Agent-Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.24.0",
    "tiktoken>=0.12.0",
    "transformers>=5.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".git", "__pycache__", ".venv", ".vscode"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "W191"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportCallInDefaultInitializer = false
reportArgumentType = "warning"
